--- a/semrate/templates/index.html
+++ b/semrate/templates/index.html
@@ -9,14 +9,27 @@
 		</form>
 	</div>
 </center>
-<h3>Recent Products/Services</h3>
-<ul>
-{% for product in products %}
-<li><a href='products/{{ product.suburi }}'> {{ product.name }} </a></li>
+<div style="width:100%">
+	<div>
+		<h3>Recent Products/Services</h3>
+		<ul>
+		{% for product in products %}
+		<li><a href='products/{{ product.suburi }}'> {{ product.name }} </a></li>
 
-{% endfor %}
-</ul>
-
+		{% endfor %}
+		</ul>
+	</div>
+	<div>
+	<h3>Recent Ratings</h3>
+	<ul>
+		{% for product, author, date in recent_pair %}
+		<li><a href='products/{{ product.suburi }}'>{{product}}</a> by <a href="/profiles/{{author}}">{{author}}</a> on {{date}}</li>
+		{% endfor %}
+	</ul>
+	</div>
+</div>
+<hr/>
+<div style="float:clear; display:block"></div>
 <script src="/site_media/js/facebook.js" type="text/javascript"></script>
     <script>
     facebookAppId = '{{ FACEBOOK_APP_ID }}';
@@ -27,34 +40,36 @@
     F = new facebookClass(facebookAppId);
     F.load();
 </script>
-<center>
 
-{% if user.is_authenticated %}
-    <p>Welcome, {{ user.username }}. Thanks for logging in.</p>
-    <p><a href="/accounts/logout">Logout here</a></p>
-{% else %}
-    <p>Welcome, new user. Please log in.</p>
-    <p><a href="/accounts/register">Register here</a></p>
-    <p><a href="/accounts/login">Login here</a></p>
-{% endif %}
+<div style="width:100%">
+	<center>
+
+	{% if user.is_authenticated %}
+		<p>Welcome, {{ user.username }}. Thanks for logging in.</p>
+		<p><a href="/accounts/logout">Logout here</a></p>
+	{% else %}
+		<p>Welcome, new user. Please log in.</p>
+		<p><a href="/accounts/register">Register here</a></p>
+		<p><a href="/accounts/login">Login here</a></p>
+	{% endif %}
 
 
-<div style="width:300px; background-color: white; border: solid blue; ">
-<form action="{% url facebook_connect %}?facebook_login=1" method="post">
-	<input type="hidden" value="{{ request.path }}" name="next" />
+	<div style="width:300px; background-color: white; border: solid blue; ">
+	<form action="{% url facebook_connect %}?facebook_login=1" method="post">
+		<input type="hidden" value="{{ request.path }}" name="next" />
 
-	<!--
-	use error next for a seperate error page
-	<input type="hidden" value="/error/" name="error_next" />
-	-->
+		<!--
+		use error next for a seperate error page
+		<input type="hidden" value="/error/" name="error_next" />
+		-->
 
-	<iframe src="http://www.facebook.com/plugins/facepile.php?app_id={{ FACEBOOK_APP_ID }}&amp;width=500&amp;max_rows=1" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:500px; height:80px;" allowTransparency="true"></iframe>
-	<input type="image" src="http://e.fashiocdn.com/images/b_signin_facebook_small.png" />
-</form>
+		<iframe src="http://www.facebook.com/plugins/facepile.php?app_id={{ FACEBOOK_APP_ID }}&amp;width=500&amp;max_rows=1" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:500px; height:80px;" allowTransparency="true"></iframe>
+		<input type="image" src="http://e.fashiocdn.com/images/b_signin_facebook_small.png" />
+	</form>
+	</div>
+	<div style="float:right" class="fb-like" data-href="http://www.pythonkursu.com" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true"></div>
+	</center>
 </div>
-<div style="float:right" class="fb-like" data-href="http://www.pythonkursu.com" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true"></div>
-</center>
-
 
 {% endblock %}
 
