--- a/trunk/semrate/templates/registration/login.html
+++ b/trunk/semrate/templates/registration/login.html
@@ -1,13 +1,14 @@
-{% extends "registration/registration_base.html" %}
-{% block title %}Login{% endblock %}
-{% block body %}
+{% extends "base.html" %}
+{% block content %}
 
+<div id='spacing_div'>
+
+<div style='margin: 40px;'>
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
-
 <form method="post" action="{% url django.contrib.auth.views.login %}">{% csrf_token %}
-<table>
+<table id='login_table'>
 <tr>
     <td>{{ form.username.label_tag }}</td>
     <td>{{ form.username }}</td>
@@ -16,11 +17,20 @@
     <td>{{ form.password.label_tag }}</td>
     <td>{{ form.password }}</td>
 </tr>
+<tr>
+    <td></td>
+    <td><input type="submit" value="login" /></td>
+</tr>
 </table>
-<p><a href="{% url auth_password_reset %}">Forgot</a> your password?  <a href="{% url registration_register %}">Need an account</a>?</p>
+<p>
+  <a href="{% url auth_password_reset %}" class='discrete_link'>[Forgot your password?]</a><br/><br/>
+  <a href="{% url registration_register %}" class='discrete_link'>[Need an account]</a>?
+</p>
 
-<input type="submit" value="login" />
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
+</div>
+
+</div>
 
 {% endblock %}
