--- a/trunk/semrate/templates/registration/password_reset_confirm.html
+++ b/trunk/semrate/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
-{% extends "registration/registration_base.html" %}
-{% block title %}Confirm password reset{% endblock %}
-{% block body %}
+{% extends "base.html" %}
+{% block content %}
+<div id='spacing_div'>
 Enter your new password below to reset your password:
 <form method="post" action="">{% csrf_token %}
 <table>
@@ -8,4 +8,5 @@ Enter your new password below to reset your password:
     <tr><td></ td><td><input type="submit" value="Set password" /></td></tr>
 </table>
 </form>
+</div>
 {% endblock %}
