--- a/trunk/semrate/templates/base.html
+++ b/trunk/semrate/templates/base.html
@@ -43,6 +43,20 @@ function dir(obj) {
 $(init);
 
 </script>
+
+
+<!-- FREEBASE -->
+
+<link type="text/css" rel="stylesheet" href="http://freebaselibs.com/static/suggest/1.3/suggest.min.css" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script type="text/javascript" src="http://freebaselibs.com/static/suggest/1.3/suggest.min.js"></script>
+<script type="text/javascript">
+$(function() {
+  $("#id_name").suggest(); //{type:'/business/consumer_product'}
+});
+</script>
+
+
 </head>
 <body>
 {% block body %}
