--- a/trunk/semrate/templates/registration/login.html
+++ b/trunk/semrate/templates/registration/login.html
@@ -26,7 +26,7 @@
   <a href="{% url auth_password_reset %}" class='discrete_link'>[Forgot your password?]</a><br/><br/>
   <a href="{% url registration_register %}" class='discrete_link'>[Need an account]</a>?
 </p>
-<div style="float:clear; display:block"></div>
+<!-- <div style="float:clear; display:block"></div>
 <script src="/site_media/js/facebook.js" type="text/javascript"></script>
     <script>
     facebookAppId = '{{ FACEBOOK_APP_ID }}';
@@ -41,23 +41,23 @@
 	<div style="width:300px; background-color: #4b7f92; border: #4b7f92; ">
 	<form action="{% url facebook_connect %}?facebook_login=1" method="post">
 		<input type="hidden" value="{{ request.path }}" name="next" />
-
+		-->
 		<!--
 		use error next for a seperate error page
 		<input type="hidden" value="/error/" name="error_next" />
 		-->
-
+<!--
 		<iframe src="http://www.facebook.com/plugins/facepile.php?app_id={{ FACEBOOK_APP_ID }}&amp;width=500&amp;max_rows=1" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:500px; height:80px;" allowTransparency="true"></iframe>
 		<input type="image" src="http://e.fashiocdn.com/images/b_signin_facebook_small.png" />
 	</form>
 	</div>
 	<div style="float:right" class="fb-like" data-href="http://www.pythonkursu.com" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true"></div>
-</div>
+</div> 
 
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 </div>
-
+-->
 </div>
 
 {% endblock %}
