--- a/trunk/semrate/templates/viewproduct.html
+++ b/trunk/semrate/templates/viewproduct.html
@@ -198,8 +198,8 @@ Rating is done on a 0 to 5 scale, with 5 being best.
 </tr>
 
 <tr>
-<td> {{product.creator}} </td>
-<td> {{product.last_activity }} </td>
+<td> <a href='/user/{{product.creator}}'>{{product.creator}} </a></td>
+<td> <a href='/user/{{product.last_activity}}'>{{product.last_activity }} </a></td>
 </tr>
 <tr>
 <td> {{product.created_time }} </td>
