--- a/trunk/semrate/templates/categories.html
+++ b/trunk/semrate/templates/categories.html
@@ -10,7 +10,7 @@
 		{% endfor%}
 		</ul>
 	{% else %}
-		<h2>Currently there are no categories. \n Why don't you <a href="/newproduct">create</a> a product to fill this void?</h2>
+		<h3>Currently there are no categories. Why don't you <a href="/newproduct">create</a> a product to fill this void?</h3>
 	{% endif %}
 
 
