--- a/semrate/templates/base.html
+++ b/semrate/templates/base.html
@@ -92,7 +92,7 @@ $(function() {
 		<img src="https://graph.facebook.com/{{facebook_id}}/picture"/>
 	  {% endif %}<br/>
 			<a class='discrete_link' style='color: #6cf; font-size:8pt; margin-left: 20px; margin-top: 5px;' href="/accounts/logout/">[Logout]</a>
-            <a class='discrete_link' style='color: #6cf; font-size:8pt; margin-left: 5px; margin-top: 5px;' href="/accounts/inbox/" >[Inbox]{% if messages_inbox_count %}{{ messages_inbox_count }} {% endif %}</a>
+<!--             <a class='discrete_link' style='color: #6cf; font-size:8pt; margin-left: 5px; margin-top: 5px;' href="/accounts/inbox/" >[Inbox]{% if messages_inbox_count %}{{ messages_inbox_count }} {% endif %}</a> -->
 	        <a class='discrete_link' style='color: #6cf; font-size:8pt; margin-left: 5px; margin-top: 5px;' href="/user/{{request.user}}">[Profile]</a> <br/>
 		{% else %}
 	  
