--- a/semrate/templates/search.html
+++ b/semrate/templates/search.html
@@ -13,7 +13,7 @@
     {% if results %}
       <ul>
       {% for product in results %}
-        <li><a href="/products/{{product.slug}}">{{ product|escape }}</a></l1>
+        <li><a href="/products{{product.slug}}">{{ product|escape }}</a></l1>
       {% endfor %}
       </ul>
     {% else %}
