--- a/trunk/semrate/templates/user.html
+++ b/trunk/semrate/templates/user.html
@@ -16,20 +16,24 @@ Number of tags: {{tagcount}} <br/>
 <br/>
 
 
-
+{% if products %}
+<h3>This person has rated following products:</h3>
 <table>
 
-{% for product in products %}
+{% for pair in products %}
 <tr>
   <td>
-	<a class='discrete_link' href='/product{{product.slug}}'> {{product.name}} </a>
-	<span style='white-space: nowrap; font-size: 8pt;'>({{product.category}})</span>
+	<a class='discrete_link' href='/products{{pair.product.slug}}'> {{pair.product.name}} </a>
+	<span style='white-space: nowrap; font-size: 8pt;'>({{pair.product.category}})</span>
   </d>
 <tr>
 
 {% endfor %}
 
 </table>
+{% else %}
+This user has not rated any products yet.
+{% endif %}
 
 
 {% endblock %}
