--- a/trunk/semrate/templates/index.html
+++ b/trunk/semrate/templates/index.html
@@ -27,7 +27,7 @@
 	<h3>Recent Ratings</h3>
 	<ul>
 		{% for product, author, date in recent_pair %}
-		<li><a href='products{{ product.slug }}'>{{product}}</a> by <a href="/profile/{{author}}">{{author}}</a> on {{date}}</li>
+		<li><a href='products{{ product.slug }}'>{{product}}</a> by <a href="/user/{{author}}">{{author}}</a> on {{date}}</li>
 		{% endfor %}
 	</ul>
 	</div>
