--- a/semrate/templates/user.html
+++ b/semrate/templates/user.html
@@ -7,6 +7,11 @@
 
 
 <img style='width: 130px; height: 100px;' src='/site_media/{{user_profile.username}}.jpg'>
+{% if is_owner %}
+
+<a href="/accounts/password/change/">Change Password</a>
+
+{% endif %}
 <br/>
 <br/>
 
