--- a/semrate/templates/viewproduct.html
+++ b/semrate/templates/viewproduct.html
@@ -166,6 +166,8 @@ Rating is done on a 0 to 5 scale, with 5 being best.
 <br/>
 <br/>
 
+<div class="fb-comments" data-href="http://www.pythonkursu.com/products{{product.slug}}" data-num-posts="10" data-width="500" data-colorscheme="dark"></div>
+
 <a class='tinybtn' href='javascript:toggleAddParameter();'>[add parameter]</a> 
 
 <div id='addParameterDiv'>
